# war-engine

./: .gitignore  Cargo.toml  Dockerfile  README.md  cards.py  resolver.py  test.py  websocket.html
.github/workflows/: cicd.yaml  clippy.yaml  frontend.yaml
cli/src/: main.rs
engine/: Cargo.toml
engine/src/: game.rs  main.rs
frontend/: websocket.html
server/: Cargo.toml  websocket.html
server/src/: card.rs  deck.rs  game.rs  lib.rs  main.rs  relay.rs
server/src/engine/: input.rs  log.rs  machine.rs  mod.rs  state.rs
server/src/game/: fsm.rs  mod.rs
server/src/types/: card.rs
src/: lib.rs  main.rs  relay.rs
src/engine/: input.rs  log.rs  machine.rs  mod.rs  state.rs
src/types/: card.rs  deck.rs
