[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3" }
rand = "0.8.5"
axum = { version = "0.5.6", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4.12"
tower-http = { version = "0.3.3", features = ["trace"]}
tracing = "0.1.34"
tracing-subscriber = "0.3.11"